@@ -78,7 +78,7 @@ public class JspUtil {
     attributeErrorMap.put(ListTag.LIST_ID_KEY, "<ui:list> tag expected, but not found!  Make sure list tags is used inside <ui:list> tag.");
     attributeErrorMap.put(ListRowsTag.ROW_REQUEST_ID_KEY, "<ui:listRows> or another list rows tag expected, but not found!");	
     attributeErrorMap.put(BaseSystemFormHtmlTag.ID_KEY, "<ui:systemForm> tag expected, but not found! Make sure your tags are surrounded by <ui:systemForm>.");
-    attributeErrorMap.put(UiWidgetContainer.REQUEST_CONTEXT_KEY, "<ui:viewPort> or another widget container tag expected, but not found!");
+    attributeErrorMap.put(UiWidgetContainer.KEY, "<ui:viewPort> or another widget container tag expected, but not found!");
   }
 
   /**
